<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ **************************************************************************
  ~
  ~ Copyright (c) 2013 - Jeffrey A. West Designs
  ~
  ~ This code is provided for example purposes only.  Neither Oracle nor
  ~ Jeffrey A. West assume any responsibility or liability for the consequences
  ~  of using this code. If you choose to use this code for any reason,
  ~ including but not limited to its use as an example you do so at your own
  ~ risk and without the support of Oracle.
  ~
  ~ This code is provided under the following licenses:
  ~  - GNU General Public License (GPL-2.0)
  ~
  ~ ***************************************************************************
  -->

<!--

 * Created by jeffreyawest
-->
<resources>

  <string name="app_name">WebLogic Monitor</string>
  <string name="action_settings">Settings</string>
  <string name="hello_world">Hello world!</string>
  <string name="my_message">hello boo</string>
  <string name="action_search">Search</string>
  <string name="welcome_message">This application can be used to monitor WebLogic using the RESTful Management APIs. </string>
  <string name="copyright_disclaimer">Oracle, Fusion Middleware and WebLogic Server are registered trademarks of Oracle Corporation.  </string>
  <string name="btn_get_started">Get Started</string>
  <string name="title_endpoint_entry">Endpoint Entry</string>
  <string name="enter_wls_coords">Enter WebLogic Coordinates Below:</string>
  <string name="title_activity_monitor">Domain Summary</string>
  <string name="pref_title_sync_frequency">Title Sync</string>
  <string name="pref_title_system_sync_settings">pref_title_system_sync_settings</string>
  <string name="pref_title_new_message_notifications">pref_title_new_message_notifications</string>
  <string name="pref_title_ringtone">pref_title_ringtone</string>
  <string name="pref_title_vibrate">pref_title_vibrate</string>
  <string name="title_activity_monitor_server">Monitor Server</string>
  <string name="title_activity_monitor_cluster">Monitor Cluster</string>
  <string name="oracleFMWLogoDescription">Oracle FMW Logo</string>
  <string name="monitor_server_header">Server: (loading)</string>
  <string name="jvm_heap">JVM Heap</string>
  <string name="cpu_load">CPU Load</string>
  <string name="jvm_cpu">JVM CPU Usage</string>
  <string name="used">Used</string>
  <string name="load">Load</string>
  <string name="consumed">Consumed</string>
  <string name="default_wls_host">10.0.0.103</string>
  <!-- <string name="default_wls_host">10.0.0.46</string> -->
  <!-- <string name="default_wls_host">192.168.56.101</string> -->
  <!-- <string name="default_wls_host">127.0.0.1</string> -->
  <string name="default_wls_port">7001</string>
  <string name="default_wls_user">weblogic</string>
  <string name="default_wls_password">welcome1</string>
  <string name="server_health">Server Health</string>
  <string name="application_target_state">Application Target State</string>
  <string name="datasource_instance_state">Datasource Instance State</string>
  <string name="server_state">Server State</string>
  <string name="title_activity_monitor_application">Monitor Application</string>
  <string name="monitor_datasource_header">Datasource: (loading)</string>
  <string name="title_activity_monitor_datasource">Monitor Datasource</string>
  <string name="next">Next</string>
  <string name="wls_version">WLS Version</string>
  <string name="os_version">OS Version</string>
  <string name="loading">(loading)</string>
  <string name="original_json">Orignal JSON</string>
  <string name="server_information">Server Information</string>
  <string name="title_activity_list_entities">Domain Entities</string>
  <string name="servers">Servers</string>
  <string name="clusters">Clusters</string>
  <string name="datasources">Datasources</string>
  <string name="applications">Applications</string>
  <string name="greater_than"><![CDATA[>]]></string>
  <string name="title_activity_list_servers">List Servers</string>
  <string name="title_activity_list_clusters">Cluster List</string>
  <string name="title_activity_list_datasources">List Datasources</string>
  <string name="title_activity_list_applications">List Applications</string>
  <string name="state_suffix">(state)</string>
  <string name="health_suffix">(health)</string>
  <string name="server_state_suffix">(state)</string>
  <string name="server_health_suffix">(health)</string>
  <string name="enter_ip_host">IP/Host:</string>
  <string name="ip_host_hint">IP/Host</string>
  <string name="enter_port_label">Port:</string>
  <string name="port_hint">Port</string>
  <string name="enter_username_label">Username:</string>
  <string name="username_hint">Username</string>
  <string name="enter_password_label">Password:</string>
  <string name="password_hint">Password</string>
  <string name="unused_cpu">Unused CPU</string>
  <string name="heap_unallocated">Unallocated</string>
  <string name="heap_allocated_free">Allocated Free</string>
  <string name="heap_allocated_used">Allocated Used</string>
  <string name="use_offline">Use In Offline Mode</string>
  <string name="cpu_usage">CPU Usage</string>
  <string name="title_server_list">Servers</string>
  <string name="title_server_detail">Server Detail</string>
  <string name="entities">Entities</string>
  <string name="cluster_loading">Cluster: (loading)</string>
  <string name="server_name">Server Name</string>
  <string name="heap_current">Heap Current</string>
  <string name="heap_free">Heap Free</string>
  <string name="heap_max">Heap Max</string>
  <string name="open_sockets">Open Sockets</string>
  <string name="jvm_version">JVM Version</string>
  <string name="operating_system">OS</string>
  <string name="current_machine">Current Machine</string>
  <string name="cluster_name">Cluster Name</string>
  <string name="n_a">N/A</string>
  <string name="server">Server</string>
  <string name="fragments_received">Fragments Received</string>
  <string name="fragments_sent">Fragments Sent</string>
  <string name="dropout_frequency">Dropout Freq.</string>
  <string name="cluster_master">Cluster Master</string>
  <string name="enabled">Enabled</string>
  <string name="type">Type</string>
  <string name="name">Name</string>
  <string name="instance">Instance</string>
  <string name="datasource_information">Datasource Information</string>
  <string name="instances">Instances</string>
  <string name="cluster_details">Cluster Details</string>
  <string name="target_states">Target States</string>

</resources>
